# cooler_couleur

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: image.rs  inferno.rs  lib.rs  magma.rs  plasma.rs  viridis.rs
src/: main.rs
