[package]
name = "coolercouleur-bin"
version = "0.1.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
cooler_couleur = { path = "./lib", features = ["img"] }

[workspace]
members = [
    "lib"
]
